# Inverted-Pendulum

./: .gitignore  CMakeLists.txt  InvertedPendulum.cpp  InvertedPendulum.h  LICENSE  README.md  inverted_pendulum.cpp  inverted_pendulum.h  main.cpp
.github/workflows/: main.yml
examples/: lqr_design.cpp
game/: main.cpp
scripts/: visualizer.py
src/: CMakeLists.txt  PID.cpp  inverted_pendulum.cpp  inverted_pendulum.h  lqr.cpp  lqr.h  main.cpp  pid.cpp  pid.h  tools.cpp  tools.h
tests/: inverted_pendulum_test.cpp
viz/: main.cpp
